tests/fixtures/invalid/min_none_bool.py
# Cannot call min() with None, Bool
x = min(None, True)
